# c-next

./: .auto-claude-status  .claude_settings.json  .cspell.json  .dependency-cruiser.cjs  .eslintrc.cjs  .gitattributes  .gitignore  .jscpd.json  .oxlintrc.json  .prettierignore  AGENTS.md  BUG-DISCOVERED-postfix-chains.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FLOAT_BUGS_FOUND.md  GRAMMAR-COVERAGE.md  README.md  TEST-COVERAGE-REPORT.md  audit-test-inventory.sh  cNext.g4  coverage.md  debug-symbols.ts  knip.json  opencode.json  package-lock.json  package.json  quick-test.cn  releasing.md  sonar-project.properties  test-coverage-mapping.md  test-gap-analysis.md  test-inventory.csv  tsconfig.json  validation-report.md  vitest.config.ts
.auto-claude/file-timelines/: .auto-claude_specs_001-100-scope-testing-coverage_build-progress.txt.json  .auto-claude_specs_001-100-scope-testing-coverage_implementation_plan.json.json  .auto-claude_tickets_.gitkeep.json  .auto-claude_tickets_high-priority_.gitkeep.json  .auto-claude_tickets_high-priority_bool-function-parameter.md.json  .auto-claude_tickets_high-priority_bool-function-return.md.json  .auto-claude_tickets_high-priority_char-array-element.md.json  .auto-claude_tickets_high-priority_char-comparison.md.json  .auto-claude_tickets_high-priority_char-escape-sequences.md.json  .auto-claude_tickets_high-priority_char-switch-case.md.json  .auto-claude_tickets_high-priority_char-variable-init.md.json  .auto-claude_tickets_high-priority_f32-addition.md.json  .auto-claude_tickets_high-priority_f32-arithmetic.md.json  .auto-claude_tickets_high-priority_f32-array-element.md.json  .auto-claude_tickets_high-priority_f32-comparison.md.json  .auto-claude_tickets_high-priority_f32-division.md.json  .auto-claude_tickets_high-priority_f32-function-parameter.md.json  .auto-claude_tickets_high-priority_f32-function-return.md.json  .auto-claude_tickets_high-priority_f32-global-var-declaration.md.json  .auto-claude_tickets_high-priority_f32-global-var-with-init.md.json  (+330 more)
.github/: BRANCH_PROTECTION_SETUP.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: publish.yml  (+1 more)
.husky/: pre-commit  pre-push
docs/: CONTRIBUTING.md  LANGUAGE-FEATURE-TESTING-RESEARCH.md  TESTING-WORKFLOW.md  architecture-decisions.md  cnext-ai-reference.md  error-codes.md  language-guide.md  learn-cnext-in-y-minutes.md  misra-compliance.md  platformio-integration.md
examples/: bit_test.cnx  blink.c  blink.cnx  references.cnx  structs.cnx  uart_buffer.cnx
grammar/: C.g4  CNext.g4  CPP14Lexer.g4  CPP14Parser.g4
output/: blink.h  math.h  mathwithincludes.c  mathwithincludes.h
platformio-integration/: cnext-build.ts  package.json
prettier-plugin/: jest.config.js  package-lock.json  package.json
scripts/: README.md  batch-validate.mjs  build.mjs  colors.ts  coverage-checker.ts  coverage-parser.ts  coverage-progress.sh  cpd.sh  file-utils.ts  generate-cpp-snapshots.ts  grammar-coverage.ts  install-vscode-extension.bat  install-vscode-extension.sh  misra-baseline.mjs  refresh.sh  release.sh  report-generator.ts  static-analysis.sh  test-cli.js  test-scanner.ts  test-utils.test.ts  test-utils.ts  test-worker.ts  test.js  test.ts
src/: SymbolTable.ts  index.js  index.ts  test-hook.ts  test.ts
test-files/: Math.cn  MathWithIncludes.cn  stdio_test.h
tests/: reddit-example.expected.c  reddit-example.expected.cpp  reddit-example.test.c  reddit-example.test.cnx  reddit-example.test.cpp
tests-gtest/: .gitignore  CMakeLists.txt  README.md
tests-gtest/cpp-entry/: CMakeLists.txt  led.test.c  led.test.cnx  led.test.h  led_test.cpp
tools/: cppcheck-suppressions.txt
vscode-extension/: .gitignore  .vscodeignore  README.md  cnext-syntax-0.1.0.vsix  comment-test.cn  language-configuration.json  package-lock.json  package.json  roadmap.md  test-file.cn  test-parser.js  tsconfig.json  vitest.config.ts
(+7272 files in other folders)
